type : lv4, lv5 기능 구현